2004-11-11  Ethan Merritt  <merritt@u.washington.edu>

	* demo/datastrings.dem: Add example of using a column both as a 
	numerical value and a string (use y value as a label).

2004-11-11  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* docs/doc2texi.el (d2t-get-terminals): Fix search pattern for
	point where to insert terminal drivers after change of indentation
	level in gnuplot.doc.

	* docs/Makefile.in (TERM_H): New variable, points to term.h file
	in the src directory.
	(term.h): Rule generating this file disabled.
	(gnuplot.html, gnuplot.info): Removed superfluous dependencies on
	gnuplot.doc.
	(gnuplot.texi): Run Emacs inside source directory --- building
	gnuplot.texi in an out-of-source build tree is futile, and never
	really worked.
	(doc2gih.o, doc2hlp.o, doc2ipf.o, doc2rnh.o, doc2rtf.o): Build
	online documentation tailored to actual program by including the
	real term.h, instead of a mangled copy.
	(BUILT_SOURCES): Removed term.h from the list.

	* docs/gnuplot.texi: Rebuilt.

	* docs/gnuplot.doc: Cleared some whitespace-only lines.

2004-11-10  Ethan Merritt  <merritt@u.washington.edu>

	* src/stdfn.h
	* src/eval.c (gp_exp) src/specfun.c (f_gamma) src/standard.c (f_tanh):
	Rename constant MINEXP to be E_MINEXP, since this is more in line with
	the terminology used in standard math libraries. Only fall back to the
	current assumption that E_MINEXP == -88 if the build environment does
	not provide a definition for DBL_MIN_10_EXP, probably in <float.h>.
	On most machines this means that gnuplot's gamma() function should now
	have the same allowed input domain as exp(lgamma()).

2004-11-10  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/save.c: Fix y-axes reversal when saving during 'set view map'.

2004-11-08  Ethan Merritt  <merritt@u.washington.edu>

	* src/term.c (do_arrow test_term): Do not attempt filled arrowheads if
	the current terminal does not provide term->filled_polygon(). Exercise
	filled arrowhead code in the 'test' command.
