@@ -3,6 +3,12 @@
 	* demo/datastrings.dem: Add example of using a column both as a 
 	numerical value and a string (use y value as a label).
 
+	* src/graphics.h: New TBOOLEAM title_is_suppressed in plot structure
+	src/graphics.c (find_maxl_keys do_plot) 
+	src/datafile.c (df_set_key_title) plot2d.c (cp_alloc eval_plots):
+	Keep an explicit flag indicating whether or not the key should contain
+	an entry for this plot.
+
 2004-11-11  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
 
 	* docs/doc2texi.el (d2t-get-terminals): Fix search pattern for
